crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[12, {\"a\": 13}, {\"b\": 14}]', 'lax $[2].a');"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..66
    FuncCall@7..66
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'[12, {\"a\": 13}, {\"b\" ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..66
        Sconst@54..66 "'lax $[2].a'"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

