crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[12, {\"a\": 13}, {\"b\": 14}]', 'lax $[0 to 10 / 0].a');"
---
SelectStmt@0..78
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..76
    FuncCall@7..76
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'[12, {\"a\": 13}, {\"b\" ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..76
        Sconst@54..76 "'lax $[0 to 10 / 0].a'"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

