crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@76.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[12, {\"a\": 13}, {\"b\": 14}, \"ccc\", true]', '$[2.5 - 1 to $.size() - 2]');"
---
SelectStmt@0..97
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..95
    FuncCall@7..95
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..65
        Sconst@24..65 "'[12, {\"a\": 13}, {\"b\" ..."
      Ascii44@65..66 ","
      Whitespace@66..67 " "
      AConst@67..95
        Sconst@67..95 "'$[2.5 - 1 to $.size( ..."
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

