crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1]', 'lax $[0]');"
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'[1]'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..41
        Sconst@31..41 "'lax $[0]'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

